ACTIN-4 Filter "no gene" symbol from CKB